--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "ES2021.WeakRef"],
     "skipLibCheck": true,
 
     /* Bundler mode */
